data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_3990.wast
;; 9. **Non-function Elements in the Table**:     Insert elements other than function references into the table and attempt a `call_indirect`. Ensure trapping due to type mismatch and validate that stack operations are correctly handled, preventing corruption.

(assert_invalid
  (module
    (type (func (param i32)))
    (table funcref (elem (i32.const 0) (ref.null func)))
    (func $invalid-call (call_indirect (type 0) (i32.const 0) (i32.const 0)))
  )
  "type mismatch"
)